Fix navigation bar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .MainContainer {
-    height: 80%;
+    height: 85%;
     width: 100%;
 }
 
@@ -24,12 +24,21 @@
     justify-content: center;
     align-items: center;
     height: 5%;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0 2%;
 }
-
+.NavItems {
+    text-align: center;
+}
+.Language {
+    margin-left: auto;
+}
+.Filler {
+    visibility: hidden;
+    margin-right: auto;
+}
 .Logo {
-    height: 70px;
+    height: 60px;
 }
 
 .Link {
